@@ -3,6 +3,8 @@ cod-tools (unreleased)
   * Added:
     - COD::CIF::DDL:
       - the get_category_name_from_local_data_name() subroutine.
+    - COD::CIF::DDL::DDL1:
+      - the classify_dic_blocks() subroutine.
   * Fixed:
     - COD::CIF::Data::Check:
       - fixed a typo in a warning message generated by the
